objects/Region_Product_Line_Target_Leads__c.object
<CustomObject>
    <label>Region Product Line Target (Leads)</label>
    <nameField>
        <displayFormat>RegPLT-{0000}</displayFormat>
        <label>Region Product Line Target (Leads) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Product Line Targets (Leads)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Jan</fullName>
                </value>
                <value>
                    <fullName>02-Feb</fullName>
                </value>
                <value>
                    <fullName>03-Mar</fullName>
                </value>
                <value>
                    <fullName>04-Apr</fullName>
                </value>
                <value>
                    <fullName>05-May</fullName>
                </value>
                <value>
                    <fullName>06-Jun</fullName>
                </value>
                <value>
                    <fullName>07-Jul</fullName>
                </value>
                <value>
                    <fullName>08-Aug</fullName>
                </value>
                <value>
                    <fullName>09-Sep</fullName>
                </value>
                <value>
                    <fullName>10-Oct</fullName>
                </value>
                <value>
                    <fullName>11-Nov</fullName>
                </value>
                <value>
                    <fullName>12-Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_PLT__c</fullName>
        <formula>TEXT(Region__c ) &amp;
&quot;-&quot; &amp;
 Product_Line__c &amp;
&quot;-&quot; &amp; 
 TEXT(Year__c ) &amp;
&quot;-&quot; &amp;
RIGHT(TEXT(Month__c ),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reg-PLT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>int_Month__c</fullName>
        <formula>TRIM(LEFT(TEXT(Month__c), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>int_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leads Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stretch_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stretch Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Target_Achieved__c</fullName>
        <formula>IF (Leads_Created__c = 0, 0, ( Leads_Created__c /  Base_Target__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Target_Variance__c</fullName>
        <formula>Leads_Created__c  -  Base_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Target Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Related_Leads__c</fullName>
        <label>Number Related Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Created_Stretch__c</fullName>
        <formula>Leads_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Achieved__c</fullName>
        <formula>IF ( Leads_Created_Stretch__c  = 0, 0, (  Leads_Created_Stretch__c  /  Stretch_Target__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Variance__c</fullName>
        <formula>Leads_Created_Stretch__c -  Stretch_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>